# Citybuilder

./: CMakeLists.txt  README.md  main.cc  vcpkg.json
api/: CMakeLists.txt
api/include/UI/: cursor.h  hovered_tile.h  ui_economy.h  ui_shapes.h  uibutton.h
api/include/behavior_tree/: bt_leaf.h  bt_node.h  bt_selector.h  bt_sequence.h  bt_tree.h
api/include/gameplay/: building_manager.h  buildings.h  economy_manager.h  game.h  mining_worker.h  nature_map.h  path.h  pathfinder_a_star.h  walker.h  woodsman.h
api/include/gameplay/nature_tile_type/: cut_trees.h  mined_stone.h  stone.h  trees.h
api/include/graphics/: drawing_the_entity.h  resource_manager.h  tile.h  tilemap.h  view.h
api/src/UI/: cursor.cc  hovered_tile.cc  ui_economy.cc  ui_shapes.cc  uibutton.cc
api/src/behavior_tree/: bt_leaf.cc  bt_node.cc  bt_selector.cc  bt_sequence.cc  bt_tree.cc
api/src/gameplay/: building_manager.cc  buildings.cc  economy_manager.cc  game.cc  mining_worker.cc  nature_map.cc  path.cc  pathfinder_a_star.cc  walker.cc  woodsman.cc
api/src/gameplay/nature_tile_type/: cut_trees.cc  (+3 more)
api/src/graphics/: drawing_the_entity.cc  resource_manager.cc  tile.cc  tilemap.cc  view.cc
core/: CMakeLists.txt
core/include/constainers/: basic_vector.h  fixed_queue.h  fixed_stack.h  fixed_vector.h  queue.h  small_vector.h  stack.h
core/include/maths/: vec2f.h  vec2i.h
core/test/: test_basic_vector.cc  test_fixed_queue.cc  test_fixed_stack.cc  test_fixed_vector.cc  test_queue.cc  test_small_vector.cc  test_stack.cc  test_vec2f.cc  test_vec2i.cc
resources/: README, PLEASE.txt
